Se añade servicio de transacción y se prueba funcionamiento en método POST #1
