# models/tr_novedad_poscontractual.go
@@ -4,13 +4,14 @@ import (
 	"fmt"
 
 	"github.com/astaxie/beego/orm"
+	"github.com/udistrital/utils_oas/time_bogota"
 )
 
 type TrNovedadesPoscontractuales struct {
 	NovedadPoscontractual *NovedadesPoscontractuales
 	Fechas                *[]Fechas
 	Propiedad             *[]Propiedad
-	Poliza                *Poliza
+	//Poliza                *Poliza
 }
 
 // AddTransaccionProyectoAcademica Transacción para registrar toda la información de un proyecto academico
@@ -18,11 +19,17 @@ func AddTransaccionNovedadPoscontractualNoPoliza(m *TrNovedadesPoscontractuales)
 	o := orm.NewOrm()
 	err = o.Begin()
 
+	horaRegistro := time_bogota.TiempoBogotaFormato()
+	m.NovedadPoscontractual.FechaCreacion = horaRegistro
+	m.NovedadPoscontractual.FechaModificacion = horaRegistro
+
 	if idNovedad, errTr := o.Insert(m.NovedadPoscontractual); errTr == nil {
 		fmt.Println(idNovedad)
 
 		for _, v := range *m.Fechas {
 			v.IdNovedadesPoscontractuales.Id = int(idNovedad)
+			v.FechaCreacion = horaRegistro
+			v.FechaModificacion = horaRegistro
 			if _, errTr = o.Insert(&v); errTr != nil {
 				err = errTr
 				fmt.Println(err)
@@ -33,6 +40,8 @@ func AddTransaccionNovedadPoscontractualNoPoliza(m *TrNovedadesPoscontractuales)
 
 		for _, v := range *m.Propiedad {
 			v.IdNovedadesPoscontractuales.Id = int(idNovedad)
+			v.FechaCreacion = horaRegistro
+			v.FechaModificacion = horaRegistro
 			if _, errTr = o.Insert(&v); errTr != nil {
 				err = errTr
 				fmt.Println(err)
